welcome.lessons.welcome.loopfor.LoopCourse.scala.error
Runner:4: error: value gauche is not a member of Unit
possible cause: maybe a semicolon is missing before `value gauche'?
  }gauche()
   ^